# aoc2020

./: 1-1.hs  1-2.hs  10-1.hs  10-2.hs  11-1.hs  11-2.hs  12-1.hs  12-2.hs  13-1.hs  13-2.hs  14-1.hs  14-2.hs  15-1.hs  15-2.hs  16-1.hs  16-2.hs  17-1.hs  17-2.hs  18-1.hs  18-2.hs  19-1.hs  19-2.hs  2-1.hs  2-2.hs  20-1.hs  20-2.hs  21-1.hs  21-2.hs  22-1.hs  22-2.hs  23-1.hs  23-2.hs  23-2.py  24-1.hs  24-2.hs  25-1.hs  3-1.hs  3-2.hs  4-1.hs  4-2.hs  (+12 more)
