cabal-version:       3.0

name:                aoc2020
version:             0.1.0.0
synopsis:            Advent of Code 2020 problems
description:         Haskell programs implemnting Advent of Code 2020
license:             GPL-3.0-or-later
author:              David Shea
maintainer:          reallylongword@gmail.com
category:            Exercise
build-type:          Simple

data-files:          input-day1

source-repository head
  type:              git
  location:          https://github.com/dashea/aoc2020

executable 1-1
  main-is:           1-1.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 1-2
  main-is:           1-2.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 2-1
  main-is:           2-1.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 2-2
  main-is:           2-2.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     listsafe >=0.1.0.1 && <0.2,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 3-1
  main-is:           3-1.hs
  build-depends:     base >=4.14 && <4.15,
                     vector >=0.12.1.2 && <0.13
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 3-2
  main-is:           3-2.hs
  build-depends:     base >=4.14 && <4.15,
                     vector >=0.12.1.2 && <0.13
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 4-1
  main-is:           4-1.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 4-2
  main-is:           4-2.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 5-1
  main-is:           5-1.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 5-2
  main-is:           5-2.hs
  build-depends:     base >=4.14 && <4.15,
                     containers >=0.6.4.1 && <0.7,
                     listsafe >=0.1.0.1 && <0.2
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 6-1
  main-is:           6-1.hs
  build-depends:     base >=4.14 && <4.15,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 6-2
  main-is:           6-2.hs
  build-depends:     base >=4.14 && <4.15,
                     exceptions >=0.10.4 && <0.11,
                     listsafe >=0.1.0.1 && <0.2,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 7-1
  main-is:           7-1.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     fgl >=5.7.0.3 && <5.8,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 7-2
  main-is:           7-2.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     fgl >=5.7.0.3 && <5.8,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 8-1
  main-is:           8-1.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     containers >=0.6.4.1 && <0.7,
                     exceptions >=0.10.4 && <0.11,
                     text >=1.2.3.2 && <1.3,
                     vector >=0.12.1.2 && <0.13
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 8-2
  main-is:           8-2.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     containers >=0.6.4.1 && <0.7,
                     exceptions >=0.10.4 && <0.11,
                     text >=1.2.3.2 && <1.3,
                     vector >=0.12.1.2 && <0.13
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 9-1
  main-is:           9-1.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 9-2
  main-is:           9-2.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 10-1
  main-is:           10-1.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 10-2
  main-is:           10-2.hs
  build-depends:     base >=4.14 && <4.15,
                     split >=0.2.3.4 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror
