cabal-version:       3.0

name:                aoc2020
version:             0.1.0.0
synopsis:            Advent of Code 2020 problems
description:         Haskell programs implemnting Advent of Code 2020
license:             GPL-3.0-or-later
author:              David Shea
maintainer:          reallylongword@gmail.com
category:            Exercise
build-type:          Simple

data-files:          input-day1

source-repository head
  type:              git
  location:          https://github.com/dashea/aoc2020

executable 1-1
  main-is:           1-1.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 1-2
  main-is:           1-2.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 2-1
  main-is:           2-1.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 2-2
  main-is:           2-2.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     listsafe >=0.1.0.1 && <0.2,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 3-1
  main-is:           3-1.hs
  build-depends:     base >=4.14 && <4.15,
                     vector >=0.12.1.2 && <0.13
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 3-2
  main-is:           3-2.hs
  build-depends:     base >=4.14 && <4.15,
                     vector >=0.12.1.2 && <0.13
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 4-1
  main-is:           4-1.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 4-2
  main-is:           4-2.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 5-1
  main-is:           5-1.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 5-2
  main-is:           5-2.hs
  build-depends:     base >=4.14 && <4.15,
                     containers >=0.6.4.1 && <0.7,
                     listsafe >=0.1.0.1 && <0.2
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 6-1
  main-is:           6-1.hs
  build-depends:     base >=4.14 && <4.15,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 6-2
  main-is:           6-2.hs
  build-depends:     base >=4.14 && <4.15,
                     exceptions >=0.10.4 && <0.11,
                     listsafe >=0.1.0.1 && <0.2,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 7-1
  main-is:           7-1.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     fgl >=5.7.0.3 && <5.8,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 7-2
  main-is:           7-2.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     fgl >=5.7.0.3 && <5.8,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 8-1
  main-is:           8-1.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     containers >=0.6.4.1 && <0.7,
                     exceptions >=0.10.4 && <0.11,
                     text >=1.2.3.2 && <1.3,
                     vector >=0.12.1.2 && <0.13
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 8-2
  main-is:           8-2.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     containers >=0.6.4.1 && <0.7,
                     exceptions >=0.10.4 && <0.11,
                     text >=1.2.3.2 && <1.3,
                     vector >=0.12.1.2 && <0.13
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 9-1
  main-is:           9-1.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 9-2
  main-is:           9-2.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 10-1
  main-is:           10-1.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 10-2
  main-is:           10-2.hs
  build-depends:     base >=4.14 && <4.15,
                     split >=0.2.3.4 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 11-1
  main-is:           11-1.hs
  build-depends:     base >=4.14 && <4.15,
                     vector >=0.12.1.2 && <0.13
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 11-2
  main-is:           11-2.hs
  build-depends:     base >=4.14 && <4.15,
                     listsafe >=0.1.0.1 && <0.2,
                     vector >=0.12.1.2 && <0.13
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 12-1
  main-is:           12-1.hs
  build-depends:     base >=4.14 && <4.15,
                     mtl >=2.2.2 && <2.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 12-2
  main-is:           12-2.hs
  build-depends:     base >=4.14 && <4.15,
                     mtl >=2.2.2 && <2.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 13-1
  main-is:           13-1.hs
  build-depends:     base >=4.14 && <4.15,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 13-2
  main-is:           13-2.hs
  build-depends:     base >=4.14 && <4.15,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 14-1
  main-is:           14-1.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     mtl >=2.2.2 && <2.3,
                     text >=1.2.3.2 && <1.3,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 14-2
  main-is:           14-2.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     mtl >=2.2.2 && <2.3,
                     text >=1.2.3.2 && <1.3,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 15-1
  main-is:           15-1.hs
  build-depends:     base >=4.14 && <4.15,
                     conduit >=1.3.4 && <1.4,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 15-2
  main-is:           15-2.hs
  build-depends:     base >=4.14 && <4.15,
                     conduit >=1.3.4 && <1.4,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 16-1
  main-is:           16-1.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     conduit >=1.3.4 && <1.4,
                     conduit-extra >=1.3.5 && <1.4,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 16-2
  main-is:           16-2.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     conduit >=1.3.4 && <1.4,
                     conduit-extra >=1.3.5 && <1.4,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 17-1
  main-is:           17-1.hs
  build-depends:     base >=4.14 && <4.15,
                     array >=0.5.4.0 && <0.6,
                     exceptions >=0.10.4 && <0.11
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 17-2
  main-is:           17-2.hs
  build-depends:     base >=4.14 && <4.15,
                     array >=0.5.4.0 && <0.6,
                     exceptions >=0.10.4 && <0.11
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 18-1
  main-is:           18-1.hs
  build-depends:     base >=4.14 && <4.15,
                     attoparsec >= 0.13.2.4 && <0.14,
                     conduit >=1.3.4 && <1.4,
                     conduit-extra >=1.3.5 && <1.4
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 18-2
  main-is:           18-2.hs
  build-depends:     base >=4.14 && <4.15,
                     parsec >=3.1.8 && <3.2,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 19-1
  main-is:           19-1.hs
  build-depends:     base >=4.14 && <4.15,
                     hashable >=1.3.0.0 && <1.4,
                     mtl >=2.2.2 && <2.3,
                     parsec >=3.1.8 && <3.2,
                     text >=1.2.3.2 && <1.3,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 19-2
  main-is:           19-2.hs
  build-depends:     base >=4.14 && <4.15,
                     parsec >=3.1.8 && <3.2,
                     text >=1.2.3.2 && <1.3,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 20-1
  main-is:           20-1.hs
  build-depends:     base >=4.14 && <4.15,
                     listsafe >=0.1.0.1 && <0.2,
                     parsec >=3.1.8 && <3.2,
                     text >=1.2.3.2 && <1.3,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 20-2
  main-is:           20-2.hs
  build-depends:     base >=4.14 && <4.15,
                     array >=0.5.4.0 && <0.6,
                     exceptions >=0.10.4 && <0.11,
                     listsafe >=0.1.0.1 && <0.2,
                     parsec >=3.1.8 && <3.2,
                     text >=1.2.3.2 && <1.3,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 21-1
  main-is:           21-1.hs
  build-depends:     base >=4.14 && <4.15,
                     text >=1.2.3.2 && <1.3,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 21-2
  main-is:           21-2.hs
  build-depends:     base >=4.14 && <4.15,
                     text >=1.2.3.2 && <1.3,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 22-1
  main-is:           22-1.hs
  build-depends:     base >=4.14 && <4.15,
                     text >=1.2.3.2 && <1.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 22-2
  main-is:           22-2.hs
  build-depends:     base >=4.14 && <4.15,
                     text >=1.2.3.2 && <1.3,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 23-1
  main-is:           23-1.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 23-2
  main-is:           23-2.hs
  build-depends:     base >=4.14 && <4.15,
                     containers >=0.6.4.1 && <0.7
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 24-1
  main-is:           24-1.hs
  build-depends:     base >=4.14 && <4.15,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 24-2
  main-is:           24-2.hs
  build-depends:     base >=4.14 && <4.15,
                     unordered-containers >=0.2.13.0 && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror

executable 25-1
  main-is:           25-1.hs
  build-depends:     base >=4.14 && <4.15
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wpartial-fields
                     -Werror
